app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Rubik:wght@300;400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --main-bg: #ffff;
  --primary: #40444d;
  --secondary: #d81f27;
  --heading-color: #181919;
  --paragraph-color: #1a1e1eb3;
  --accent1: #1a1e1e80;
  --accent2: #d81f271a;
  --accent3: #fefefecc;

  --ff-heading: 'Merriweather', serif;
  --ff-text: 'Rubik', sans-serif;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  font-family: var(--ff-text);
  scroll-behavior: smooth;
}

li {
  list-style: none;
  transition: all 250ms ease;
}

li:hover,
button:hover {
  opacity: 0.7;
}

img,
input,
button {
  display: block;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  cursor: pointer;
  transition: all 250ms ease;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

.app {
  max-width: 1320px;
  margin-inline: auto;
  /* min-height: 100vh; */
}

.layout {
  @apply py-7 mx-5 sm:py-10;
}

.heading_section {
  @apply text-[24px] font-semibold lg:text-[28px] mb-[50px];
}

.hamburger {
  @apply z-10 mr-[-13px] sm:hidden;
}

.hamburger .ham {
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  transition: transform 400ms;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.hamburger .ham .line {
  fill: none;
  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
  stroke: var(--heading-color);
  stroke-width: 5.5;
  stroke-linecap: round;
}

.hamburger .hamRotate.active {
  transform: rotate(45deg);
}

.hamburger .hamRotate180.active {
  transform: rotate(180deg);
}

.hamburger .ham8 .middle {
  stroke-dasharray: 40 142;
  transform-origin: 50%;
  transition: transform 400ms;
}

.hamburger .ham8 .bottom {
  stroke-dasharray: 40 85;
  transform-origin: 50%;
  transition: transform 400ms, stroke-dashoffset 400ms;
}

.hamburger .ham8 .top {
  stroke-dasharray: 40 160;
}

.hamburger .ham8.active .top {
  stroke-dashoffset: -64px;
}

.hamburger .ham8.active .middle {
  transform: rotate(90deg);
}

.hamburger .ham8.active .bottom {
  stroke-dashoffset: -64px;
}

@media (max-width: 639px) {
  .wrapper_menu {
    position: fixed;
    top: 0;
    bottom: 0;
    right: -100%;
    /* right: 0; */
    width: 100%;
    height: 100%;
    background: var(--secondary);
    transition: right 0.3s ease-in;
    z-index: 9;
  }
}

.wrapper_menu.active {
  right: 0;
}

.card_featured {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: -o-grab;
  cursor: -ms-grab;
  cursor: grab;
}

